Fix group css on mobile

--- a/src/assets/styles/cmps/board/task/_task-list.scss
+++ b/src/assets/styles/cmps/board/task/_task-list.scss
@@ -42,7 +42,11 @@
 
 
         .task-title {
-            background-color: white;
+
+            @include for-narrow-layout {
+
+                background-color: white;
+            }
 
             .editable-txt-container {
                 width: 95%;
